# REdit

./: .env.example  .gitignore  README.md  db.sqlite3  manage.py  package-lock.json  package.json  pyproject.toml
dashboard/: scripts.py  urls.py  views.py
dashboard/templatetags/: analytics_filters.py
posts/: forms.py  models.py  scripts.py  serializers.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_contentgroup_theme.py  0003_remove_contentgroup_theme_contentgroup_end_text_and_more.py  0004_alter_contentgroup_end_text_and_more.py  0005_contentgroup_media_per_video.py  0006_contentgroup_type.py  0007_contentgroup_background_and_more.py  0008_alter_contentgroup_end_text_and_more.py  0009_contentgroup_upload_description_alter_post_content.py
r_edit/: asgi.py  settings.py  urls.py  wsgi.py
templates/dashboard/: dashboard.html
templates/dashboard/charts/: detailed_reels_charts.html  detailed_shorts_charts.html
templates/dashboard/scripts/: detailed_reels_charts.html  detailed_shorts_charts.html  general_charts.html
templates/posts/: groups.html  posts-form.html  posts.html  subreddits.html
templates/r_edit/: base.html
templates/videos/: video-form.html
theme/static_src/: tailwind.config.js
videos/: admin.py  forms.py  models.py  scripts.py  urls.py  views.py
videos/migrations/: 0001_initial.py  0002_alter_generatedvideo_video.py  0003_generatedvideo_used_media.py  0004_remove_generatedvideo_length_and_more.py  0005_alter_generatedvideo_meta_data.py  0006_uploadedvideo.py
videos/scripts/: Tiktok_uploader.py  generation.py  tts.py  uploading.py  utils.py
